# kyokki

./: .claudeignore  .env.api.exampleBAK  .env.example  .env.worker.exampleBAK  .gitignore  CLAUDE.md  CLAUDE_CODE_GUIDE.md  HANDOFF.md  HANDOFF_backend.md  HANDOFF_frontend.md  default.yaml  docker-compose.prod.yml  docker-compose.yml  fridge_logger_architecture.md  fridge_logger_todo.md  instructions.md  pipeline_review_increment_1_7.md  pyproject.toml  stack.env
.claude/: settings.json
.claude/commands/: assign-agent.md  commit-push-pr.md  handoff.md  lint-fix.md  new-endpoint.md  orchestrate.md  pipeline-review.md  review.md  secrets-check.md  takeoff.md  test.md  update-todos.md
.github/: README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  pr-checks.yml
backend/: Dockerfile  README.md  prestart.sh  pytest.ini  requirements.txt  start.sh  test_real_receipt.py  test_vllm_response.py
backend/alembic/: env.py
backend/app/: main.py  tasks.py
backend/scripts/: test_connections.py
backend/tests/: README.md  conftest.py
docs/: .env.example  ADAPTIVE_PARSER_SPEC.md  ARCHITECTURE.md  CHAT_UI_PROMPTS.txt  FRONTEND_PLAN.md  HOME_ASSISTANT_SPEC.md  LEGACY_CODE_ASSESSMENT.md  README.md  SCANNER_ARCHITECTURE.md  SETUP_SUMMARY.md  TODO.md  adaptive_parser_TODO.md  backend_TODO.md  frontend_TODO.md  home_assistant_TODO.md  infrastructure_ai_TODO.md  mealie_integration_TODO.md  vLLM_MANUAL_TEST.md
frontend/: Dockerfile  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  (+1 more)
(+127 files in other folders)
